<resources>
    <string name="app_name">Kitchen Inventory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">My Inventory</string>
    <string name="nav_add_foods">Add Foods</string>
    <string name="nav_manage_inventory">Manage Inventory</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_shopping_list">Shopping List</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About</string>

    <!-- Toolbar titles when navigation menu item is selected (fragments)-->
    <string-array name="nav_item_activity_titles">
        <item>My Inventory</item>
        <item>Add Foods</item>
        <item>Manage Inventory</item>
        <item>Notifications</item>
        <item>Shopping List</item>
        <!--<item>Settings</item>-->
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="activity_title_filter">Filter</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_sortby">Sort By</string>
    <string name="action_mark_all_read">Mark All as Read</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">I\'m a blank fragment</string>
    <string name="action_filter">filter</string>
</resources>

